fixed modal overlapping

--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -194,14 +194,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 5;
+    z-index: 1001; 
   }
   
   .modal {
     background: white;
+    margin-top:10vh;
     padding: 20px;
     box-sizing: border-box;
-    width: 50%;
+    width: 50vw;
     height:700px;
     overflow-y: auto;
     position:absolute;
